--- a/styles/sites.scss
+++ b/styles/sites.scss
@@ -10,6 +10,7 @@
 .leadme-more {
     background-color: #e7eef2ff;
     height: 100vh;
+    overflow: hidden;
 }
 
 .banner {
